[gd_scene load_steps=30 format=3 uid="uid://dhve75utx7fh7"]

[ext_resource type="Texture2D" uid="uid://bwng2xhy78hng" path="res://sprites/characters/battle/president/spr_dish_big.png" id="2_7agk0"]
[ext_resource type="Script" path="res://scenes/characters/battle_enemies/scr_enemy_dish.gd" id="2_rem6r"]
[ext_resource type="Shader" path="res://shaders/shd_dish_iridescence.gdshader" id="2_x2g0d"]
[ext_resource type="Texture2D" uid="uid://dc4khr6yps6nm" path="res://sprites/spirit/spr_dish_use.png" id="3_s1scl"]
[ext_resource type="Texture2D" uid="uid://bkp0gw7o5yt7o" path="res://sprites/characters/battle/president/spr_president.png" id="4_k0s8a"]
[ext_resource type="Texture2D" uid="uid://c34u2d6fe3rix" path="res://sprites/characters/battle/president/spr_pizza_delivery_guy.png" id="5_ov1ks"]
[ext_resource type="Texture2D" uid="uid://ct6siq546arn3" path="res://sprites/characters/battle/president/pizz.png" id="7_8uiop"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j267r"]
frequency = 0.0218
offset = Vector3(250, 0, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4csr8"]
noise = SubResource("FastNoiseLite_j267r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_38e2f"]
shader = ExtResource("2_x2g0d")
shader_parameter/iridescence_reducer = 0.85
shader_parameter/iridescence_reducer_multiplier = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_4csr8")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vr7js"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_8cgki"]
atlas = ExtResource("3_s1scl")
region = Rect2(0, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlja7"]
atlas = ExtResource("3_s1scl")
region = Rect2(120, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqeiq"]
atlas = ExtResource("3_s1scl")
region = Rect2(0, 120, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdvbp"]
atlas = ExtResource("3_s1scl")
region = Rect2(120, 120, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k1cs"]
atlas = ExtResource("3_s1scl")
region = Rect2(0, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qogwd"]
atlas = ExtResource("3_s1scl")
region = Rect2(120, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1uh4"]
atlas = ExtResource("3_s1scl")
region = Rect2(0, 360, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwlqa"]
atlas = ExtResource("3_s1scl")
region = Rect2(120, 360, 120, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfbcs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cgki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlja7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqeiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdvbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k1cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qogwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1uh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwlqa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kfc1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Lid:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Gun:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lsna7"]
resource_name = "pizz"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.28319, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Lid:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, -1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Gun:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sxmm"]
_data = {
"RESET": SubResource("Animation_kfc1w"),
"pizz": SubResource("Animation_lsna7")
}

[sub_resource type="Animation" id="Animation_p50l1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node/CanvasGroup/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-111, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node/CanvasGroup/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node/CanvasGroup/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/CanvasGroup/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/CanvasGroup/LeftHand:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 72)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node/CanvasGroup/LeftHand:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/CanvasGroup/RightHand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-76, 73)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/CanvasGroup/RightHand:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/CanvasGroup/Head:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node/CanvasGroup:material:shader_parameter/iridescence_reducer_multiplier")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Node/UseSprite:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Node/UseSprite:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vc1hr"]
resource_name = "attack"
length = 0.8465
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node/CanvasGroup/RightHand:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-75.6719, 72.7813), Vector2(-57, 79), Vector2(-69, 54), Vector2(-76, 93), Vector2(-75.6719, 72.7813)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node/CanvasGroup/RightHand:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.080008, 0.577302, 1.00698, 0.080008]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node/CanvasGroup/Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 26), Vector2(2.46939, 25.5592)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/CanvasGroup/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_56w3f"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node/CanvasGroup/Head:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.447059, 0.588235, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node/CanvasGroup/Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 23), Vector2(0, 28), Vector2(2, 27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node/CanvasGroup/Head:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/CanvasGroup/LeftHand:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(71.0064, 73.9426), Vector2(68, 82), Vector2(74, 78)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/CanvasGroup/LeftHand:rotation")
tracks/4/interp = 4
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.21117]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node/CanvasGroup/RightHand:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-75.9779, 72.9853), Vector2(-73, 79), Vector2(-69, 74)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/CanvasGroup/RightHand:rotation")
tracks/6/interp = 4
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0632487, 0.147132]
}

[sub_resource type="Animation" id="Animation_8yxc3"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node/CanvasGroup/Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-111, 0), Vector2(-110, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node/CanvasGroup/Body:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node/CanvasGroup/Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1.1, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, 25), Vector2(0, 23), Vector2(3, 27)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/CanvasGroup/Head:rotation")
tracks/3/interp = 4
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/CanvasGroup/LeftHand:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1.3, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(71, 74), Vector2(75, 72), Vector2(76, 72)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node/CanvasGroup/LeftHand:rotation")
tracks/5/interp = 4
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 0.692045),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0787756]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/CanvasGroup/RightHand:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.8, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-76, 73), Vector2(-73, 71)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/CanvasGroup/RightHand:rotation")
tracks/7/interp = 4
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.1247, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.121979, 6.28033, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/CanvasGroup/Head:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dpfpo"]
resource_name = "use_spirit"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node/CanvasGroup/Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1978, 26.4637), Vector2(-1, 30), Vector2(3, 29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node/CanvasGroup/Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node/CanvasGroup/RightHand:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-73.6667, 71.4444), Vector2(-88, 41), Vector2(-35, 86), Vector2(-35, 84), Vector2(-80, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/CanvasGroup/RightHand:rotation")
tracks/3/interp = 4
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.121979, 0.610674, -0.179861, 6.15649, 6.19969, 6.84116]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/CanvasGroup/LeftHand:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(75.4345, 72.2523), Vector2(64, 82), Vector2(35, 74), Vector2(36, 75), Vector2(36, 75), Vector2(85, 70)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node/CanvasGroup/LeftHand:rotation")
tracks/5/interp = 4
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.00995788, 0.399512, 0.019107, 0.0612441, -0.552918]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/CanvasGroup:material:shader_parameter/iridescence_reducer_multiplier")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.46, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/UseSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 7, 0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/UseSprite:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0btp4"]
_data = {
"RESET": SubResource("Animation_p50l1"),
"attack": SubResource("Animation_vc1hr"),
"hurt": SubResource("Animation_56w3f"),
"idle": SubResource("Animation_8yxc3"),
"use_spirit": SubResource("Animation_dpfpo")
}

[node name="Dish" type="Node2D" node_paths=PackedStringArray("animator")]
script = ExtResource("2_rem6r")
animator = NodePath("AnimationPlayer")
toughness = 1.0
altruism = 0.949
innovation = 0.5
gender = 4
effect_immunities = Array[String](["little", "sopping"])

[node name="Node" type="Node" parent="."]

[node name="CanvasGroup" type="CanvasGroup" parent="Node"]
material = SubResource("ShaderMaterial_38e2f")
position = Vector2(0, -27)

[node name="Body" type="Sprite2D" parent="Node/CanvasGroup"]
position = Vector2(-111, 0)
texture = ExtResource("2_7agk0")
centered = false
region_enabled = true
region_rect = Rect2(1, 96, 220, 95)

[node name="Head" type="Sprite2D" parent="Node/CanvasGroup"]
position = Vector2(0, 23)
texture = ExtResource("2_7agk0")
centered = false
offset = Vector2(-30, -72)
region_enabled = true
region_rect = Rect2(82, 3, 60, 88)

[node name="LeftHand" type="Sprite2D" parent="Node/CanvasGroup"]
position = Vector2(75, 72)
texture = ExtResource("2_7agk0")
centered = false
offset = Vector2(-43, -63)
region_enabled = true
region_rect = Rect2(229, 48, 48, 70)

[node name="RightHand" type="Sprite2D" parent="Node/CanvasGroup"]
position = Vector2(-76, 73)
texture = ExtResource("2_7agk0")
centered = false
offset = Vector2(-4, -64)
flip_h = true
region_enabled = true
region_rect = Rect2(229, 48, 48, 70)

[node name="UseSprite" type="AnimatedSprite2D" parent="Node"]
self_modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_vr7js")
sprite_frames = SubResource("SpriteFrames_gfbcs")
metadata/_edit_lock_ = true

[node name="FunnyCutscenePeople" type="Node2D" parent="Node"]

[node name="President" type="Sprite2D" parent="Node/FunnyCutscenePeople"]
position = Vector2(189, 12)
texture = ExtResource("4_k0s8a")

[node name="PizzaGuy" type="Sprite2D" parent="Node/FunnyCutscenePeople"]
position = Vector2(253, 12)
texture = ExtResource("5_ov1ks")

[node name="Node2D" type="Node2D" parent="Node/FunnyCutscenePeople"]
scale = Vector2(0.48, 0.48)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Pizzabox" type="Node2D" parent="Node/FunnyCutscenePeople/Node2D"]
modulate = Color(1, 1, 1, 0)

[node name="PizzAnimation" type="AnimationPlayer" parent="Node/FunnyCutscenePeople/Node2D/Pizzabox"]
libraries = {
"": SubResource("AnimationLibrary_4sxmm")
}

[node name="Box" type="Sprite2D" parent="Node/FunnyCutscenePeople/Node2D/Pizzabox"]
texture = ExtResource("7_8uiop")
region_enabled = true
region_rect = Rect2(0, 0, 185, 189)

[node name="Gun" type="Sprite2D" parent="Node/FunnyCutscenePeople/Node2D/Pizzabox"]
visible = false
rotation = 0.349066
texture = ExtResource("7_8uiop")
region_enabled = true
region_rect = Rect2(18, 208, 150, 90)

[node name="Label" type="Label" parent="Node/FunnyCutscenePeople/Node2D/Pizzabox/Gun"]
offset_left = -54.876
offset_top = -58.4399
offset_right = -14.876
offset_bottom = -50.4399
scale = Vector2(3.47919, 3.1754)
text = "(gun)"

[node name="Lid" type="Sprite2D" parent="Node/FunnyCutscenePeople/Node2D/Pizzabox"]
position = Vector2(0, -96)
texture = ExtResource("7_8uiop")
offset = Vector2(0, 90)
region_enabled = true
region_rect = Rect2(187, 0, 185, 177)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0btp4")
}
autoplay = "idle"
playback_default_blend_time = 0.1

[node name="TimeForPizz" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PowerLabel" type="Label" parent="TimeForPizz"]
self_modulate = Color(1, 1, 1, 0.729412)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 158.0
offset_bottom = 10.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "p o w e r : "
horizontal_alignment = 1
